# zero-copy-ipc

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark_spsc_queue.cpp
include/ipc/: common.hpp  histogram.hpp  shared_region.hpp  spsc_queue.hpp  tsc.hpp
tests/: CMakeLists.txt  test_shared_region.cpp  test_spsc_queue.cpp
